--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
@@ -6,24 +6,26 @@ Responde como cierto o falso según corresponda.
 
 Preguntas:
 1. ¿Es un algoritmo un conjunto de pasos precisos, definidos y finitos que conducen a la solución de un problema? (valor 0.5)
-
+cierto
 
 
 2. ¿Todo algoritmo debe obedecer a la estructura básica de un sistema, es decir:
 ENTRADA -- PROCESO -- SALIDA?(valor 0.5)
+cierto
 
 
 3. ¿Al diseñar un algoritmo se deben tener presente las características de precisión, definición y finitud?(valor 0.5)
+cierto
 
 4. De las siguientes descripciones, menciona cuál es un algoritmo cualitativo y cuál es un algoritmo cuantitativo:
 
-      a) El proceso de realizar un sándwich por la mañana. (valor 0.5)
+      a) El proceso de realizar un sándwich por la mañana. (valor 0.5) algoritmo cualitativo
 
-      b) El proceso de calcular la edad de una persona sabiendo su fecha de nacimiento.(valor0. 5)
+      b) El proceso de calcular la edad de una persona sabiendo su fecha de nacimiento.(valor0. 5) algoritmo cuantitativo
 
-      c) Sumar cuántos comentarios tuvo una publicación en alguna red social. (valor 0.5)
+      c) Sumar cuántos comentarios tuvo una publicación en alguna red social. (valor 0.5) algoritmo cuantitativo
 
-      d) El proceso que seguiste para inscribirte a la Escuela de Códigos. (valor 0.5)
+      d) El proceso que seguiste para inscribirte a la Escuela de Códigos. (valor 0.5) algoritmo cuantitativo
      
 
 5.- Para lavarse las manos necesitamos: un jabón, un recipiente con agua, una toalla y nuestras manos. Tomamos el recipiente con agua y vaciamos un poco para humedecer
@@ -34,11 +36,11 @@ secamos el agua de nuestras manos. ¡Listos! Tenemos nuestras manos limpias.
 
     En el texto anterior señala qué parte pertenece a la entrada, proceso y resultado de un algoritmo. (valor 1.5)
 
-    Entrada: 
+    Entrada: un jabón, un recipiente con agua, una toalla y nuestras manos.
 
-    Proceso: 
+    Proceso: Tomamos el recipiente con agua y vaciamos un poco para humedecer nuestras manos. Tomamos el jabón y lo frotamos entre nuestras manos de tal manera que genere espuma. Dejamos a lado el jabón y con la espuma generada frotamos nuestras manos y entrelazamos nuestros dedos. Tomamos el recipiente con agua y enjuagamos hasta que retiremos toda la espuma y los residuos de jabón. Revisamos si nuestras manos están lo suficientemente limpias, si no, realizamos el procedimiento anterior. Si nuestras manos están lo suficientemente limpias, tomamos la toalla y secamos el agua de nuestras manos.
 
-    Resultado:
+    Resultado: ¡Listos! Tenemos nuestras manos limpias.
 
 
 2️⃣ OPERADORES
@@ -52,50 +54,66 @@ Preguntas:
 1.Realiza las siguientes operaciones numéricas y calcula el valor final:
 
     a) (100/5^2 + 1) + 11 * 3 =   (valor 0.5)
-   
+    (100/25+1)+11*3=
+    (4+1)+11*3=
+    (5)+11*3=
+    5+33= 38
 
 
     b) (18/9 + 24) – ( 5 * 4 – 3^3) =      (valor 0.5)
-   
+    (2 + 24) – ( 5 * 4 – 27) =
+    (26) – ( 20 – 27) =
+    (26) – ( -7) =
+    26 +7 = 33
  
     c) ((8-6)^2 * 3 - 2)^3 =        (valor 0.5)
+     (2^2 * 3 - 2)^3 = 
+     (4 * 3 - 2)^3 = 
+     (12 - 2)^3 = 
+     10^3 =  1000
+     
 
 
     d) (3^2 + 10/2) + (3 * 9 - 1) =      (valor 0.5)
+    (9 + 10/2) + (27 - 1) =
+    (9 + 5) + (26) =
+    14 + 26 = 40
  
 
 2. Evalúe con FALSO o VERDADERO las siguientes expresiones relacionales. (valor 0.4 cada respuesta de la tabla)
 
         Expresión                                        Resultado
 
-        “Juan Hernández” <> “Juan Hdz.”
-        4 + 5 >= 9
-        -7*4/2 < 0
-        ‘A’ = ‘a’
+        “Juan Hernández” <> “Juan Hdz.” VERDADERO
+        4 + 5 >= 9 VERDADERO
+        -7*4/2 < 0 VERDADERO
+        ‘A’ = ‘a’ FALSO
 
 
 3. Juan gana $200 por hora, Pedro gana $120 por hora. Esta quincena Juan trabajó 10 horas y Pedro 15, ¿Juan recibió un sueldo mayor al de Pedro?
 (valor 0.4 )
 
-    Resultado
+    Resultado Verdadero
+    Juan 200*10=2000
+    Pedro 120*15=1800
 
 4. Evalúe con FALSO o VERDADERO las siguientes expresiones lógicas. (valor 0.4 cada respuesta de la tabla)
 
         Expresión                                     Resultado
 
-        15 = 6 AND 2 < 8 
+        15 = 6 AND 2 < 8 FALSO
 
-        (10-2 > 9) OR (5*4 = 21)
+        (10-2 > 9) OR (5*4 = 21) FALSO
 
-        (2==1) || (-1==-1)
+        (2==1) || (-1==-1) VERDADERO
 
-        (2==2) && (3==-1)
+        (2==2) && (3==-1) FALSO
 
 
 5. Los requisitos para sacar una credencial electoral son: ser mayor de edad y ser de  nacionalidad mexicana. Si Ómar tiene 21 años y nació en la Ciudad de México, ¿puede
 sacar la credencial? (valor 0.4 )
 
-    Respuesta: 
+    Respuesta: VERDADERO
 
 
 3️⃣ CONCEPTOS BÁSICOS DE PROGRAMACIÓN
@@ -109,15 +127,15 @@ por cada respuesta correcta de la tabla )
 
     Significado                                                            Concepto
 
-    Es un bloque de instrucciones (código
-    fuente) escritas en cierto lenguaje de
-    programación cuyo propósito es resolver
+    Es un bloque de instrucciones (código                               
+    fuente) escritas en cierto lenguaje de                              Programa
+    programación cuyo propósito es resolver                             
     un problema.
 
 
     Programa informático que procesa el
-    código fuente de un proyecto de software
-    durante su tiempo de ejecución, es decir,
+    código fuente de un proyecto de software                            
+    durante su tiempo de ejecución, es decir,                           Compilador
     mientras el software se está ejecutando, y
     actúa como una interfaz entre ese
     proyecto y el procesador.
@@ -125,20 +143,20 @@ por cada respuesta correcta de la tabla )
 
     Es un idioma artificial creado para
     indicarle a la computadora lo que debe
-    hacer. tiene ciertas reglas de escritura
+    hacer. tiene ciertas reglas de escritura                            Lenguaje de programación
     (sintaxis) en las que utiliza símbolos y
     palabras clave, además de una semántica
     (interpretación interna).
 
 
     La computadora realiza una traducción de
-    sus componentes al lenguaje máquina, es
+    sus componentes al lenguaje máquina, es                             Ejecución de un programa
     decir, convierte las instrucciones en
     cadenas de ceros y unos.
 
 
     Programa informático que traduce todo el
-    código fuente de un proyecto de software
+    código fuente de un proyecto de software                            Intérprete
     a código máquina antes de ejecutarlo.
     Solo entonces el procesador ejecuta el
     software, obteniendo todas las
@@ -158,28 +176,33 @@ Preguntas:
 
 1. Menciona al menos 3 tipos de datos que existen: (valor 0.4)
 
-    Respuesta:
+    Respuesta: 
+    Numéricos enteros
+    Booleanos TRUE FALSE
+    Caracter Char
+    
+    
 
 2. ¿Qué tipo es cada uno de los siguientes datos? (valor 0.4 por cada inciso)
 
                                                                                       Tipo de dato
-        a) 15
+        a) 15 | Numérico entero
 
-        b) ‘a’
+        b) ‘a’ | Caracter char
 
-        c) El mensaje ‘Esto es dato entero’
+        c) El mensaje ‘Esto es dato entero’ | String cadena de caracteres
 
-        d) 35 >= 12
+        d) 35 >= 12 |  Booleano
 
-        e) 3*3
+        e) 3*3 | Numérico entero
 
-        f) La edad de una persona
+        f) La edad de una persona | Numérico entero
 
-        g) El pago por un servicio o producto
+        g) El pago por un servicio o producto | Numerico Real
 
-        h) El símbolo ‘@’
+        h) El símbolo ‘@’ | Dato de caracter unico char
 
-        i) El mensaje ‘Agrega más artículos a tu canasta para envío GRATIS’
+        i) El mensaje ‘Agrega más artículos a tu canasta para envío GRATIS’ | String cadena de caracteres
 
 
 12. Una empresa que se dedica a la venta de productos de salud pide a sus clientes que al registrarse en su página introduzcan los siguientes datos:
@@ -200,15 +223,15 @@ Llena la siguiente tabla:
 
     Requerimiento                                               Tipo de dato
 
-    Nombre Completo:
+    Nombre Completo:                                              String cadena de caracteres
     
-    Peso en kilogramos:
+    Peso en kilogramos:                                           Numerico real
     
-    Correo electrónico:
+    Correo electrónico:                                           String cadena de caracteres
     
-    Número de teléfono:
+    Número de teléfono:                                           Numerico entero
     
-    Resuelve el siguiente CAPTCHA: 3 > 4
+    Resuelve el siguiente CAPTCHA: 3 > 4                          Booleano true||false
     ¿Cierto o Falso?
 
 
@@ -224,49 +247,49 @@ Preguntas:
 
                                          Respuesta: 
 
-    1. int
+    1. int                                INVALIDO
 
-    2. anInt
+    2. anInt                              VALIDO
 
-    3. 3list
+    3. 3list                              INVALIDO
 
-    4. i1
+    4. i1                                 VALIDO
 
-    5. 1
+    5. 1                                  INVALIDO
 
-    6. thing1
+    6. thing1                             VALIDO
 
-    7. 1thing
+    7. 1thing                             INVALIDO
 
-    8. ONE-HUNDRED
+    8. ONE-HUNDRED                        INVALIDO         
 
-    9. ONE_HUNDRED
+    9. ONE_HUNDRED                        VALIDO
 
-    10. something2do
+    10. something2do                      VALIDO
 
 
 Indica que tipo de variable es en cada caso: (valor 0.3 por cada uno)
 
                                            Tipo de variable
-    11. iva = 0.15 
+    11. iva = 0.15                        NUMERICA
 
-    12. letra = ‘a’
+    12. letra = ‘a’                       ALFANUMERICO
 
-    13. suma = a + b/ c 
+    13. suma = a + b/ c                   NUMERICA
 
-    14. interrup = true
+    14. interrup = true                   LOGICA 
 
-    15. apellido= ‘lopez’ 
+    15. apellido= ‘lopez’                 ALFANUMERICO
 
-    16. x = x + 1
+    16. x = x + 1                         CONTADOR
 
-    17. suma = suma + num 
+    17. suma = suma + num                 ACUMULADOR
 
-    18. c = sqrt(a*a + b*b)
+    18. c = sqrt(a*a + b*b)               DE TRABAJO
 
-    19. costo=750
+    19. costo=750                         NUMERICA
 
-    20. i = i - 1
+    20. i = i - 1                         CONTADOR
     
     
   [Regresar al menu principal del módulo](https://github.com/escuelaDeCodigoMargaritaMaza/escuela_de_codigo/tree/main/PENSAMIENTO_COMPUTACIONAL)
